# demo-proxy-grpc

./: .gitignore  README.md  flake.nix  go.mod  go.sum
clients/grpc/: main.go
clients/http/: main.go
protos/: hello.pb.go  hello.proto  hello_grpc.pb.go
scripts/: in_ns.sh  prepare.sh
services/: Cargo.toml  build.rs
services/src/: grpc.rs  tcp.rs
