[package]
name = "services"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "endpoint-grpc"
path = "src/grpc.rs"

[[bin]]
name = "endpoint-tcp"
path = "src/tcp.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.3.19", features = ["derive"] }
log = "0.4.19"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.9"

